:lipstick: Fix bug overflow x

--- a/src/Styles/Location.css
+++ b/src/Styles/Location.css
@@ -1,7 +1,7 @@
 .Location {
 	width: 100%;
     color: yellow;
-    margin-top: 6vh;
+    margin-top: 10vh;
 }
 
 .map-location {
