--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,6 +1,11 @@
+html{
+  max-width: 100vw;
+  overflow-x: hidden;  
+}
 body {
   margin: 0;
   background-color: #222 !important;
+  max-width: 100vw;
   overflow-x: hidden;
 }
 * {
